2001-03-21  Ryan Nunn <triforce@merlin.net.au>
	* usecode/siintrinsics.h: Changed 0x44, 0x45, 0x46 to 0x45, 0x46, 0x47

2001-03-21  Jeff Freedman  <jeff@amy.nerble.net>

	* SI - Fixing bugs (and not necessarily successfully).

2001-03-20  Max Horn  <max@quendi.de>
	* acconfig.h: added MACOSX
	* animate.cc: added missing using std::map;
	* configure.in: added MacOS X
	* audio/Audio.cc: fixed Audio::play_wave_sfx which returned nothing
	  instead of an AudioID (this did break compilation on multiple systems)
	* conf/Makefile.am: added $(SYSLIBS) to confregress target
	* tools/shp2pcx.cc: fixed some type mistakes (used Uint32 instead
	  of uint32 which broke compilation on MacOS X)
	* tools/Makefile.am: added $(SYSLIBS) to expack & shp2pcx target

2001-03-20  Jeff Freedman  <jeff@amy.nerble.net>

	* SI fixes:  Claw works in Knight's test.  Dead wolf gets correct
	body.  Usecode function with eventid=7 called when NPC dies.
	* Also fixed bug where NPC's keep opening/closing shutters.

2001-03-19  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gumps/gump_utils.h: added a few includes for OpenBSD
	* configure.in: added a ton of libraries for OpenBSD build
	* audio/Audio.cc: return from play_wave_sfx when no .wavs present

2001-03-19  Jeff Freedman  <jeff@amy.nerble.net>

	* SFX's:  'SFX objects' sounds implemented (such as fountains,
	surf, moongates).  Sounds added for gumps.

2001-03-18  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* credits.txt: added Alex Botero-Lowry (openbsd work)

2001-03-17  Christoph Reichenbach  <jameson@linuxgames.com>

	* game.cc (get_game_identity): long -> sint32 fix
	* cheat_screen.cc: 
	  tools/shp2pcx.cc: Appropriate #ifndefs for Alpha/Linux/cxx

2001-03-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/faces2.shp: the rest of the faces by Philip G.
	* data/cleaver.shp: updated cleaver
	* data/amulets.shp: white heart amulet by Adam D.
	* gumps/Paperdoll_gump_info.cc, data/flx.in, Makefile*: include art
