@@ -105,6 +105,7 @@ EXULT_FLX_OBJECTS = \
 	data/faces.shp \
 	data/faces2.shp \
 	data/amulets.shp \
+	data/bgfiredoom.shp \
 	data/flx.in 
 
 $(EXEC) : $(OBJS) data/exult.flx
