@@ -34,3 +34,4 @@ cleaver.shp
 faces.shp
 faces2.shp
 amulets.shp
+bgfiredoom.shp
