@@ -1,3 +1,7 @@
+2001-03-21  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* data/bgfiredoom.shp: more art by Adam
+	* data/flx.in, Makefile.*, gumps/Paperdoll_gump_info.cc: included art
+
 2001-03-21  Ryan Nunn <triforce@merlin.net.au>
 	* usecode/siintrinsics.h: Changed 0x44, 0x45, 0x46 to 0x45, 0x46, 0x47
 
